<resources>
    <string name="app_name">TicTacToe</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="_0">0</string>
    <string name="sair_do_jogo">Sair do jogo</string>

    <string-array name="bandeiras_array">
        <item>Mister</item>
        <item>Vista</item>
        <item>Daciolo</item>
    </string-array>
</resources>
